Add functionality to popup Add new book

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                 <h1>Add new book</h1>
                 <form>
                     <div class="form_control">
-                        <input type="text" placeholder="Title">
+                        <input type="text" placeholder="Title" required>
                     </div>
                     <div class="form_control">
-                        <input type="text" placeholder="Author">
+                        <input type="text" placeholder="Author" required>
                     </div>
                     <div class="form_control">
-                        <input type="number" placeholder="Pages">
+                        <input type="number" placeholder="Pages" required>
                     </div>
                     <div class="form_control book_status">
                         <label for="book_status">Have you read it?  <input type="checkbox" id="book_status"></label>
@@ -42,6 +42,6 @@
     </div>
        
         
-  
+  <script src="/script.js"></script>
 </body>
 </html>
